--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
     "prisma": "^6.12.0",
     "socket.io": "^4.8.1",
     "streamifier": "^0.1.1",
-    "zod": "^4.0.5",
+    "zod": "^4.0.5"
+    
+  },
+  "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
@@ -37,10 +40,7 @@
     "@types/multer": "^2.0.0",
     "@types/node": "^24.0.14",
     "@types/nodemailer": "^6.4.17",
-    "@types/socket.io": "^3.0.1"
-  },
-  "devDependencies": {
-    
+    "@types/socket.io": "^3.0.1",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
